--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@
 
 html, body { height: 100%; }
 
+html {
+  scroll-behavior: smooth;
+}
+
 html, body { overflow-x: hidden; }
 @supports (overflow: clip) { html, body { overflow-x: clip; } }
 
